# regolith-pyrolysis-simulator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  app.py  conftest.py  install-dependencies.py  install-engines.py  install.sh  pyproject.toml  regolith-pyrolysis-run.py  requirements.txt
_attic/: conftest.py
_attic/factsage/: README.md  REINTEGRATION.patch  factsage.py  factsage_config.py  factsage_doctor.py
_attic/game/: events.py  routes.py
data/: ceramic_types.yaml  ceramics_taxonomy.yaml  corpus_version.yaml  custom_compositions.yaml  debug_feedstocks.yaml  feedstocks.yaml  foulant_thermo.yaml  furnace_materials.yaml  material_densities.yaml  materials.yaml  optimize_costs.yaml  optimizer_recipe_vocabulary.json  rump_compositions.yaml  setpoints.yaml  species_catalog.yaml  stage0_carbon_partition.yaml  test_runs.yaml  thermal_train_params.yaml  vapor_pressures.yaml  vapor_pressures_schema.md  wall_materials.yaml
data/literature/: vacuum_pyrolysis_measurements.yaml  vacuum_pyrolysis_measurements_schema.md  vacuum_pyrolysis_sticking.yaml  wall_reactivity_matrix.yaml
data/optimize_profiles/: ceres_regolith.yaml  ci_carbonaceous_chondrite.yaml  cm_carbonaceous_chondrite.yaml  comet_nucleus.yaml  e_type_enstatite_aubrite.yaml  lunar_eac_1a.yaml  lunar_highland.yaml  lunar_highlands_lhs1.yaml  lunar_mare_high_ti.yaml  lunar_mare_lms1.yaml  lunar_mare_low_ti.yaml  lunar_pkt_kreep_average.yaml  lunar_spa_kreep_influenced.yaml  m_type_metallic_phase.yaml  m_type_silicate_phase.yaml  (+8 more)
docs/: DESIGN.md  architecture-eval-runtime-2026-06.md  architecture.md  chemistry-methods.md  chemistry-provenance.yaml  citation-policy.md  concepts.md  developer-map.md  feedstocks.md  getting-started.md  glossary.md  lab-validation-whitepaper.md  melt-backends.md  model-limitations.md  optimizer-user-guide.md  output-interpretation.md  process-model.md  recipe-playbook.md  runner-output-schema.md  running-from-shell.md  session-script-protocol.md  sio_tsweep_lunar_mare_low_ti_2026-05-19.md  sio_tsweep_mars_basalt_2026-05-19.md  thermal-train.md
docs-private/: bug-stockpile-2026-06-30-backwards-sweeps.md  cr-speciation-implementation-2026-05-18.md  magemin-build-2026-05-20.md  oge-engine-surface-extension-2026-05-18.md  phase-b-cohort-3-cj-olivine-kems-convergence-2026-05-18.md  sio-alpha-surface-convergence-2026-05-19.md  sio-engine-stresstest-2026-05-20.md  sio-phase3bis-sweep-convergence-2026-05-20.md  sio-tsweep-convergence-2026-05-19.md  sio-walldep-chunkA-convergence-2026-05-19.md  sio-walldep-chunkB-convergence-2026-05-19.md  sio-walldep-chunkC-convergence-2026-05-19.md  sio-yield-convergence-2026-05-19.md  vapor-pressure-calibration-sio-convergence-2026-05-19.md  vapor-pressure-calibration-sio-tsweep-2026-05-19.md  vaporock-species-expansion-2026-05-20.md  wolf2022-vaporock-anchor-convergence-2026-05-20.md
engines/: __init__.py  domain_reason.py
game/: __init__.py  refinery.py
scripts/: RUNBOOK.md  analyze_dose_cache_study.py  audit_chemistry_provenance.py  audit_doc_anchors.py  backfill_physics_bucket.py  backfill_run_artifact.py  blast_grind.sh  build_c6_manifests.py  cache_convert.py  cal_threshold_calibration.py  classify_epoch2_liquid_fraction_failures.py  collect_recipe_db.sh  com.rpp.grid-pregrind.plist.template  epoch_grind.py  evaporation_selectivity_map.py  generate_optimizer_recipe_vocabulary.py  generate_thermal_train_default_fixture.py  grid_pregrind.py  grid_pregrind_triage.py  grid_pregrind_writer.py  grind_cleanup.py  grind_harvest.py  grind_home.py  grind_status.py  install_recipe_db_starter.py  make_recipe_db_profile.py  merge_grind_cache.py  pack_recipe_db_starter.sh  populate_reduced_real_cache.py  profile_eval_hotpath.py  pytest_partitioned_gate.py  recipe_db_build.py  regenerate_runner_goldens.py  rekey_cache_engine_identity.py  run_fidelity_doe.py  save_recipe.py  seed_reduced_real_cache.py  sso2_owner_recipe_report.py  sso_r_validation_map.py  validate_cache_c4_interpolation.py  (+4 more)
simulator/: __init__.py  __main__.py  account_ids.py  alphamelts_reference_pressure.py  backend_names.py  backends.py  campaigns.py  capacity_coupling.py  ceramic_classifier.py  coating_lifespan.py  condensation.py  condensation_routing.py  config.py  core.py  corpus_version.py  cost_energy.py  cost_ledger.py  cost_parameters.py  decision_tree.py  diagnostics.py  electrolysis.py  energy.py  engine_local_config.py  environment.py  equilibrium.py  equipment.py  evaporation.py  extraction.py  fe_redox.py  feedstock_composition.py  feedstock_guard.py  fidelity_vocabulary.py  furnace_materials.py  grind_preflight.py  interpolation_uncertainty.py  lab_geometry.py  lab_schedule.py  mass_balance.py  material_densities.py  melt_regime.py  (+26 more)
tests/: optimizer_fixtures.py  test_0_5_4_live_path_integration.py  test_alphamelts_backend.py  test_alphamelts_provider.py  test_alphamelts_volatility_diagnostic.py  test_artifact_guards.py  test_backend_kg_adapters.py  test_backend_selection.py  test_backends.py  test_backfill_physics_bucket.py  test_bughunt_phys_regressions.py  test_c0_char_diagnostic.py  test_c6_grind_manifests.py  test_c7_ca_aluminothermic_campaign.py  test_cache_convert.py  test_cached_real_backend.py  test_cal_threshold_calibration.py  test_campaign_endpoint_config.py  test_campaign_pressure_defaults.py  test_capacity_coupling.py  test_ceramic_classifier.py  test_char_reductant_epoch.py  test_classify_epoch2_liquid_fraction_failures.py  test_coating_lifespan.py  test_completion_contracts.py  test_condensation_extrapolation_honesty.py  test_condensation_parallel_determinism.py  test_condensation_temperature_overrides.py  test_config_bundle.py  test_controlled_o2_flow_boundary.py  test_cost_ledger.py  test_cross_surface_parity.py  test_debug_feedstocks.py  test_doc_anchors.py  test_dose_cache_prep_scripts.py  test_ellingham_import_no_cycle.py  test_energy_budget.py  test_engine_local_config.py  test_environment_vacuum_floor.py  test_epoch_grind.py  (+152 more)
web/: __init__.py  advisory.py  events.py  feedstock_data.py  routes.py  run_store.py
(+298 files in other folders)
