[project]
name = "regolith-pyrolysis-simulator"
version = "0.1.0"
description = "Oxygen Shuttle regolith refinery simulator for lunar and Mars feedstocks"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "pyyaml>=6.0",
    "plotly>=5.18",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
melts = ["petthermotools>=0.4.5,<0.5"]
vapor = [
    # Canonical upstream package/import name is "vaporock"; no PyPI release.
    "vaporock @ git+https://gitlab.com/ENKI-portal/vaporock.git@v0.1#subdirectory=src",
]
# MAGEMin (https://github.com/ComputationalThermodynamics/MAGEMin) is a
# compiled C/Fortran Gibbs-energy minimiser. There is NO pure-PyPI MAGEMin
# package: the clone ships zero Python files, no setup.py, no pyproject.toml.
# Its primary interface is Julia (`MAGEMin_C.jl`); from Python it is reached
# via the Julia bridge or by driving the compiled `MAGEMin` binary directly.
# So `[magemin]` is a documented build path, not a fake pin (mirrors how the
# alphaMELTS binary is documented in docs/melt-backends.md rather than pinned).
#
# Build path:
#   1. Clone + build MAGEMin v1.9.3 outside synced repo storage (for example
#      ~/.local/src/MAGEMin; see its README "Manual compilation": needs MPICH,
#      LAPACKE/Accelerate, NLopt; `make all` produces `MAGEMin`).
#   2. Copy the executable to `engines/magemin/bin/MAGEMin`. That ignored path
#      is the adapter's canonical subprocess auto-detect location; no Python
#      package install is needed.
#   3. Optional Julia bridge: `pip install juliacall` then add `MAGEMin_C`
#      from the Julia REPL (`] add MAGEMin_C`). The adapter probes a `julia`
#      bridge but the subprocess path is the supported default.
# See docs/melt-backends.md "MAGEMin adapter notes" and
# docs-private/chemistry-engine-binding-spec-2026-05-14.md §4.
magemin = [
    # juliacall is the only pip-installable piece of the MAGEMin Python
    # path, and only for the optional Julia bridge. The MAGEMin binary
    # itself is built from source per the comment block above. Commented
    # out by default: the supported path is the compiled binary + subprocess.
    # "juliacall>=0.9,<0.10",
]
# PySulfSat (https://github.com/PennyWieser/PySulfSat) is the
# SULFUR_SATURATION_GATE engine. Pinned at the canonical lowercase PyPI
# distribution name. The 1.0.x line is the published series at the time
# of this integration (verified via `pip show PySulfSat` against the
# editable install from `install-engines.py`, which clones the upstream
# repository as a sibling and installs it via `pip install -e`).
sulfur = ["pysulfsat>=1.0,<2"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Parallelize across cores via pytest-xdist + bound per-test runtime via
# pytest-timeout. Without these, the full gate took ~10 min serial and
# routinely exceeded the 1500s sandbox tool window of in-flight codex-acp
# workers (which silently invoke `pytest` on top of their chunk subset).
# `-n auto` uses all available cores; `--timeout=300` kills any test that
# silently hangs past 5 min. Workers can still override with `-n0` for
# debugging serial behavior.
addopts = "-n auto --timeout=300"

# Explicit package layout. Auto-discovery works for this repo today, but
# enumerating the simulator subpackages here documents the on-disk tree
# (and pins what counts as "the simulator") -- especially useful as the
# `simulator.chemistry.kernel` scaffold lands ahead of any wiring.
[tool.setuptools.packages.find]
where = ["."]
include = [
    "simulator*",
    "simulator.accounting*",
    "simulator.melt_backend*",
    "simulator.chemistry*",
    "simulator.chemistry.kernel*",
    "engines*",
    "web*",
]
exclude = ["tests*", "docs*", "docs-private*", ".claude*"]
