[project]
name = "regolith-pyrolysis-simulator"
version = "0.5.4"
description = "Oxygen Shuttle regolith refinery simulator for lunar and Mars feedstocks"
requires-python = ">=3.10"
# The full model suite is REQUIRED for the simulator to function with
# physics-honest activity coefficients and partial pressures:
#   - vaporock: diagnostic VAPOR_PRESSURE overlay (γ_M/speciation checks live
#     here; builtin Antoine/Ellingham remains authoritative). Installed
#     via install-engines.py, NOT pip: it cannot import without the native
#     thermoengine build (Cython + GSL + Obj-C/C dylibs + sulfLiq). See the
#     note in [project.dependencies] below.
#   - petthermotools: provides AlphaMELTS / ThermoEngine path for melt
#     equilibria (the canonical SILICATE_EQUILIBRIUM authority).
#   - MAGEMin: required as a compiled C/Fortran binary at
#     `engines/magemin/bin/MAGEMin` (see comment block below). The
#     SILICATE_LIQUIDUS shadow + GATE_LIQUID_FRACTION authoritative-fallback.
# Only FactSAGE / ChemApp remains optional (it requires a paid license; the
# multiphase strict-config path stays diagnostic-only without it).
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "pyyaml>=6.0",
    "plotly>=5.18",
    # Upper bound is load-bearing: the VAPOR_PRESSURE engine (vaporock) imports
    # np.bool8, removed in numpy 2.0. An unbounded spec lets `uv sync` resolve
    # numpy>=2 and silently break `import vaporock` -> cascading
    # ProviderUnavailableError across the suite. Do not relax without making the
    # native engine stack numpy-2 compatible.
    "numpy>=1.26,<2",
    "scipy>=1.12",
    "petthermotools>=0.4.5,<0.5",
    # vaporock (VAPOR_PRESSURE diagnostic overlay) is intentionally NOT a pip dependency.
    # `import vaporock` hard-requires `thermoengine` -- a native build (a Cython
    # extension linking system GSL, Objective-C/C dylibs, and the transitive
    # PyPI dep `sulfLiq`) that pip cannot compile. vaporock + thermoengine are
    # therefore provisioned by install-engines.py (sibling git clones, native
    # builds, editable installs), the same documented-build-path treatment
    # MAGEMin/alphaMELTS get below. A git+https pin here previously aborted the
    # entire pip batch when its ref went stale (the v0.1 tag predated vaporock's
    # src/ restructure and exposed no installable Python project).
]

[project.optional-dependencies]
# Optional extras for paths NOT required by the default operational chain.
optimize = ["optuna==4.8.0"]
# MAGEMin (https://github.com/ComputationalThermodynamics/MAGEMin) is a
# compiled C/Fortran Gibbs-energy minimiser. There is NO pure-PyPI MAGEMin
# package: the clone ships zero Python files, no setup.py, no pyproject.toml.
# Its primary interface is Julia (`MAGEMin_C.jl`); from Python it is reached
# via the Julia bridge or by driving the compiled `MAGEMin` binary directly.
# So `[magemin]` is a documented build path, not a fake pin (mirrors how the
# alphaMELTS binary is documented in docs/melt-backends.md rather than pinned).
#
# Build path:
#   1. Clone + build MAGEMin (currently v1.9.6 on cluster) outside synced repo storage (for example
#      ~/.local/src/MAGEMin; see its README "Manual compilation": needs MPICH,
#      LAPACKE/Accelerate, NLopt; `make all` produces `MAGEMin`).
#   2. Copy the executable to `engines/magemin/bin/MAGEMin`. That ignored path
#      is the adapter's canonical subprocess auto-detect location; no Python
#      package install is needed.
#   3. Optional Julia bridge: `pip install juliacall` then add `MAGEMin_C`
#      from the Julia REPL (`] add MAGEMin_C`). The adapter probes a `julia`
#      bridge but the subprocess path is the supported default.
# See docs/melt-backends.md "MAGEMin adapter notes" and
# docs-private/chemistry-engine-binding-spec-2026-05-14.md §4.
magemin = [
    # juliacall is the only pip-installable piece of the MAGEMin Python
    # path, and only for the optional Julia bridge. The MAGEMin binary
    # itself is built from source per the comment block above. Commented
    # out by default: the supported path is the compiled binary + subprocess.
    # "juliacall>=0.9,<0.10",
]
# PySulfSat (https://github.com/PennyWieser/PySulfSat) is the
# SULFUR_SATURATION_GATE engine. Pinned at the canonical lowercase PyPI
# distribution name. The 1.0.x line is the published series at the time
# of this integration (verified via `pip show PySulfSat` against the
# editable install from `install-engines.py`, which clones the upstream
# repository as a sibling and installs it via `pip install -e`).
sulfur = ["pysulfsat>=1.0,<2"]
# dev includes the pytest plugins the project-level [tool.pytest.ini_options]
# addopts depends on (`-n auto` needs pytest-xdist; `--timeout=300` needs
# pytest-timeout). Without these declared, a clean checkout doing
# `pip install -e .[dev]` would let pytest abort during argument parsing
# before any test runs. Per autoreview 2026-05-27 finding.
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.8",
    "pytest-timeout>=2.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# `_attic/` holds backends removed from the live tree but preserved for
# later re-integration (e.g. FactSAGE). Its tests are NOT collected: they
# require the backend to be wired into the live code. `testpaths` already
# scopes default collection to `tests/`; `norecursedirs` additionally
# blocks `_attic` if someone runs `pytest .` or `pytest _attic` directly.
norecursedirs = ["_attic", ".git", ".venv", "engines", "*.egg-info"]
# Parallelize across cores via pytest-xdist + bound per-test runtime via
# pytest-timeout. Without these, the full gate took ~10 min serial and
# routinely exceeded the 1500s sandbox tool window of in-flight codex-acp
# workers (which silently invoke `pytest` on top of their chunk subset).
# `-n auto` uses all available cores; `--dist loadgroup` keeps
# @pytest.mark.xdist_group families on one worker; `--timeout=300` kills any
# test that silently hangs past 5 min. Workers can still override with `-n0`
# for debugging serial behavior.
addopts = "-n auto --dist loadgroup --timeout=300"
# Deterministic gate: `python -m pytest tests/` is the canonical default. Tests
# marked both serial and xdist_group("serial") still run exactly once in that
# default xdist pass, but loadgroup keeps them on one worker. The optional
# two-pass helper runs non-serial tests under xdist and serial tests under -n0.
# A test is marked serial only when xdist co-scheduling makes it flake —
# sqlite busy-lock contention (grind scratch shards), stateful smoke fixtures
# (SSO-R validation/state), SocketIO pause/resume loops, and heavy
# real-backend / subprocess baselines (north-star c2a, evaporation shadow
# parity, MAGEMin freeze gate, vpr p6a CLI) that spuriously SIGALRM under
# parallel load. Coverage is unchanged, only scheduling differs.
markers = [
    "serial: run under -n0 only; flakes under xdist co-scheduling (sqlite lock / stateful fixture / heavy real-backend)",
    "xdist_group(name): run marked tests on the same xdist worker under --dist loadgroup",
]

# Explicit package layout. Auto-discovery works for this repo today, but
# enumerating the simulator subpackages here documents the on-disk tree
# (and pins what counts as "the simulator") -- especially useful as the
# `simulator.chemistry.kernel` scaffold lands ahead of any wiring.
[tool.setuptools.packages.find]
where = ["."]
include = [
    "simulator*",
    "simulator.accounting*",
    "simulator.melt_backend*",
    "simulator.chemistry*",
    "simulator.chemistry.kernel*",
    "engines*",
    "web*",
]
exclude = ["tests*", "docs*", "docs-private*", ".claude*"]
